--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: userrepo
+    name: userrevhire
 spec:
     type: LoadBalancer
     ports:
     - port: 8082 
     selector:
-        app: userrepo
+        app: revhire
