--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -15,4 +15,25 @@ spec:
       containers:
         - name: revhire
           image: ajayregis.azurecr.io/userrevhire
+          env:
+          - name : DB_URL
+            valueFrom: 
+              secretKeyRef:
+                name: db-credentials
+                key: DB_URL
+          - name : DB_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: db-credentials
+                key : DB_USERNAME
+          - name : DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: db-credentials
+                key: DB_PASSWORD
+          - name: DB_PORT
+            valueFrom:
+              secretKeyRef:
+                name: db-credentials
+                key: DB_PORT
           
